[project]
name = "cloud-utils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "google-api-python-client>=2.162.0",
  "google-auth-oauthlib>=1.2.1",
  "loguru>=0.7.3",
  "pyyaml>=6.0.2",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.17.1",
  "types-pyyaml>=6.0.12.20250516",
  "google-api-python-client-stubs",

]
