[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
authors = [{ name = "Orlando Reyes", email = "eorlando.reyesruiz@gmail.com" }]
name = "gdrive_suite"
version = "0.1.0"
description = "A client for interacting with google drive and google sheets."
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "google-api-python-client>=2.162.0",
  "google-auth-oauthlib>=1.2.1",
  "loguru>=0.7.3",
  "pyyaml>=6.0.2",
]

[project.urls]
Homepage = "https://github.com/TheLionCoder/cloud-utils"


[project.optional-dependencies]
dev = [
  "mypy>=1.17.1",
  "types-pyyaml>=6.0.12.20250516",
  "google-api-python-client-stubs",
  "pytest",
  "pytest-mock",
]

[tool.setuptools.packages.find]
where = ["src"]